crates/general/fixtures/invalid/top_level_single_colon.zt
-- Top-level typed bindings use `::`, not `:`.

x : Int = 5
x
